--- a/src/components/commons/Starwarsbutton.module.css
+++ b/src/components/commons/Starwarsbutton.module.css
@@ -15,7 +15,7 @@
   background: #ffe81f;
   border-radius: 10px;
   font-size: 28px;
-  font-weight: bold;
+  font-weight: bolder;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
