--- a/src/components/commons/Starwarsbutton/Starwarsbutton.module.css
+++ b/src/components/commons/Starwarsbutton/Starwarsbutton.module.css
@@ -1,10 +1,11 @@
 .container {
-  width: 30%;
+  width: 80%;
   height: 100px;
   position: relative;
   box-shadow: 0 0 15px yellow;
   border-radius: 8px;
   cursor: pointer;
+  color: black !important;
 }
 .active {
   position: absolute;
