--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,3 +6,14 @@
   width: 20%;
   margin: 9% 0px 5% 0px;
 }
+.logoutbtn {
+  background: black;
+  border: 0;
+  color: #ffe81f;
+  text-decoration: underline;
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 20px;
+  cursor: pointer;
+}
