--- a/src/components/Questions/tasks/tasks.module.css
+++ b/src/components/Questions/tasks/tasks.module.css
@@ -14,3 +14,15 @@ p {
 .bad {
   color: tomato;
 }
+
+@media (max-width: 900px) {
+  p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 500px) {
+  p {
+    font-size: 12px;
+  }
+}
